fix: prevent fiscal code from overlapping envelope window in AAR bilingual (#182)

--- a/templates-assets/styles/aar_accessible.css
+++ b/templates-assets/styles/aar_accessible.css
@@ -280,6 +280,10 @@ a.black {
     padding-left: 12px;
 }
 
+.pb-15 {
+    padding-bottom: 15px !important;
+}
+
 .pb-33 {
     padding-bottom: 33px;
 }
